# ogr2postgis

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: argparse.hpp  indicators.hpp  ogr2postgis.cpp  ogr2postgis.hpp  ogr2postgis_gui.cpp  tabulate.hpp  thread_pool.hpp
